--- a/app/views/home/_sidebar.html.erb
+++ b/app/views/home/_sidebar.html.erb
@@ -2,6 +2,9 @@
     <div class="imageContainer">
         <% if current_user.avatar_content_type %>
             <%= image_tag current_user.avatar.url(:medium) %>
+        <% elsif current_user.filepicker_url != "" %>
+            <%= filepicker_image_tag current_user.filepicker_url, w: 160, h: 160, fit: 'clip' %>
+
         <% else %>
             <img src="/assets/default.jpg">
         <% end %>
