--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -24,6 +24,11 @@
 
     <br>
 
+    <div>
+        <%= f.label :filepicker_url, "Upload Your Avatar:" %>
+        <%= f.filepicker_field :filepicker_url %> <!-- User#filepicker_url is a regular string column -->
+    </div>
+
     <div id="slider1" class="ui-slider"></div>
     <p>
         <label for="talklevels-label"></label>
