adding s3 configs to paperclip etc

--- a/app/views/home/_sidebar.html.erb
+++ b/app/views/home/_sidebar.html.erb
@@ -10,7 +10,7 @@
         <% end %>
     </div>
 
-    <h3><%= current_user.name %></h3>       <!--do something with current_user.sign_in_count  !!!   -->
+    <h3><%= current_user.name %></h3>
     <p> <%=link_to "Edit Profile", edit_user_path(current_user.permalink) %> </p>
 
     <p><%= link_to current_user.kicks.count, mykicks_path  %> kicks posted</p>
