--- a/app/assets/stylesheets/_home-index.css.scss
+++ b/app/assets/stylesheets/_home-index.css.scss
@@ -8,16 +8,21 @@
     left: 0;
     background: rgba(0, 0, 0, 0.54);
     color: white;
-    padding: 10px;
+    padding: 20px;
 
     .imageContainer {
-      width: 110px;
+      width: 114px;
       padding-bottom: 100%;
       position: relative;
       overflow: hidden;
+      border-radius: 50%;
+      margin-bottom: 19px;
+
       IMG {
-        //width: 100%;
-        height: 100%;
+        height: 110px;
+        width: 110px;
+        border-radius: 55px;
+        border: 2px solid white;
         position: absolute;
         left: 0;
       }
