--- a/app/assets/stylesheets/_user-show.css.scss
+++ b/app/assets/stylesheets/_user-show.css.scss
@@ -8,8 +8,9 @@
     overflow: hidden;
 
     IMG {
-      //width: 100%;
-      height: 100%;
+      height: 110px;
+      width: 110px;
+      //height: 100%;
       position: absolute;
       left: 0;
       // border:10px solid #eee;
