some styling (image circle) for stuff

--- a/app/assets/stylesheets/_flat-ui.css.scss
+++ b/app/assets/stylesheets/_flat-ui.css.scss
@@ -9,7 +9,7 @@
 }
 
 
-/* Use the following CSS code if you want to use data attributes for inserting your icons */
+/* Use the following CSS code if you want to use data attributes for inserting your icon asfds */
 
 [data-icon]:before {
   font-family: 'Flat-UI-Icons';
