--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,8 @@
 
     <div class="kicks-all">
         <button id="single-all" class="btn btn-info btn-block" data-text-single="Single view?" data-text-all="View All">Single view?</button>
-
+        <% beer_icon = asset_path("beer-icon.png") %>
+        <div id="foobar" data=<%= beer_icon %> />
         <% @kicks.each do |kick| %>
 
             <div class="kick-contr kick-list-<%= kick.id %>" id="<%= kick.id %>" >
