--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,7 +25,7 @@
                     <% elsif (kick.filepicker_avatar_url != "") && (kick.user_avatar != 'nil') %>
                         <a href="user/<%= kick.username %>"> <%= filepicker_image_tag kick.filepicker_avatar_url, fit: 'clip' %></a>
                     <% else %>
-                        <a href="user/<%= kick.username %>"> <img src="/assets/default.jpg"></a>
+                        <a href="user/<%= kick.username %>"> <img src="https://s3.amazonaws.com/kickin_it_s3/icons/default.jpg"></a>
                     <% end %>
 
                 </div>
