updating time for displaying all kicks

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,9 +24,9 @@
                 <div class="desc" style="color: #F39C12"><%= kick.scale %> </div>
                 <div class="imageContainer">
 
-                    <% if kick.user_avatar_content_type %>
+                    <% if kick.user_avatar %>
                         <a href="user/<%= kick.username %>"> <%= image_tag kick.user_avatar.url(:thumb), class: "opacity" %></a>
-                    <% elsif (kick.filepicker_avatar_url != "") && (kick.user_avatar != 'nil') %>
+                    <% elsif (kick.filepicker_url != "") && (kick.user_avatar == 'nil') %>
                         <a href="user/<%= kick.username %>"> <%= filepicker_image_tag kick.filepicker_avatar_url, fit: 'clip' %></a>
                     <% else %>
                         <a href="user/<%= kick.username %>"> <img src="https://s3.amazonaws.com/kickin_it_s3/icons/default.jpg"></a>
