--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -36,13 +36,13 @@
                                class: "btn btn-default", onchange:"pickPic(event)"%>
     </div>
 
+  <br>
     <!--Saves to s3-->
-    <div>
-        <%= f.label :avatar, "Upload a photo from your computer" %>
-        <br />
-        <%= f.file_field :avatar, class: "form-control"  %>
-    </div>
-    <br>
+    <!--<div>-->
+        <!--&lt;!&ndash;<#%= f.label :avatar, "Upload a photo from your computer" %>&ndash;&gt;-->
+        <!--<br />-->
+        <!--&lt;!&ndash;<#%= f.file_field :avatar, class: "form-control"  %>&ndash;&gt;-->
+    <!--</div>-->
 
     <div class="resu"></div>
 
