--- a/app/views/kicks/show.html.erb
+++ b/app/views/kicks/show.html.erb
@@ -10,10 +10,11 @@
             <div class="party">
                 <div class="pull-left" href="#">
                     <div class="imageContainer">
-                        <% if @kick.filepicker_avatar_url.nil? %>
-                            <%= filepicker_image_tag @kick.filepicker_avatar_url, w: 110, h: 110, fit: 'clip' %>
-                        <% elsif @kick.avatar_file_size != 'nil' %>
-                            <%= image_tag @kick.user_avatar.url(:thumb), :class => "pic img-rounded img-responsive"   %>
+                        <% if @kick.filepicker_avatar_url %>
+                            <%= filepicker_image_tag @kick.filepicker_avatar_url, w: 110, h: 110, fit: 'clip', class: 'pic img-rounded img-responsive' %>
+
+                        <!--<#% elsif @kick.avatar_file_size != 'nil' %>-->
+                            <!--<#%= image_tag @kick.user_avatar.url(:thumb), :class => "pic img-rounded img-responsive"   %>-->
                         <% else %>
                             <img src="/assets/default.jpg">
                         <% end %>
