--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -2,9 +2,7 @@
     <div class="row">
         <br>
         <div class="imageContainer">
-            <% if @user.avatar_content_type == "image/jpeg"  %>
-                <%= image_tag @user.avatar.url(:thumb), class: "img-rounded img-responsive" %>
-            <% elsif @user.filepicker_url != ""  %>
+            <% if @user.filepicker_url != ""  %>
                 <%= filepicker_image_tag @user.filepicker_url, w: 110, h: 110, fit: 'clip', class: "img-rounded img-responsive" %>
             <% else %>
                 <img src="/assets/default.jpg">
